Added airplane type searching

--- a/src/app/flights_page/flights-list/flight-list-item/flight-list-item.component.html
+++ b/src/app/flights_page/flights-list/flight-list-item/flight-list-item.component.html
@@ -11,7 +11,7 @@
 <div class="row m-0 p-0">
     <div class="col d-flex justify-content-between">
         <i class="bi bi-airplane-engines me-2"></i>
-        {{flight.aircraftRegistration}} ({{flight.aircraftType}})
+        {{flight.aircraft.registration}} ({{flight.aircraft.aircraftType.type}})
     </div>
     <div class="col d-flex justify-content-between">
         <i class="bi bi-clock me-2"></i> 
