--- a/src/components/side-nav/sidenav.component.html
+++ b/src/components/side-nav/sidenav.component.html
@@ -21,6 +21,11 @@
                         <i class="bi bi-list-ol me-2"></i> List
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/flights', 'add']" class="nav-link text-light" routerLinkActive="active">
+                        <i class="bi bi-plus-circle me-2"></i> New flight
+                    </a>
+                </li>
             </ul>
         </li>
     </ul>
