--- a/src/components/side-nav/sidenav.component.html
+++ b/src/components/side-nav/sidenav.component.html
@@ -26,6 +26,11 @@
                         <i class="bi bi-plus-circle me-2"></i> New flight
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/flights', 'logbook']" class="nav-link text-light" routerLinkActive="active">
+                        <i class="bi bi-table me-2"></i> Logbook
+                    </a>
+                </li>
             </ul>
         </li>
     </ul>
