--- a/src/app/flights_page/flights-page.component.html
+++ b/src/app/flights_page/flights-page.component.html
@@ -1,10 +1,8 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2 p-0">
+<div>
+        <div>
             <side-nav></side-nav>
         </div>
-        <div class="col-10 p-0">
+        <div>
             <router-outlet></router-outlet>
         </div>
-    </div>
 </div>
