--- a/src/app/flights_page/add-flight-page/add-flight-page.component.html
+++ b/src/app/flights_page/add-flight-page/add-flight-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="container p-3">
     <div class="row">
-        <div class="col-md">
+        <div class="col-md table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Aircraft
                 <i class="bi-airplane"></i>
@@ -45,7 +45,7 @@
         </div>
 
 
-        <div class="col-md  ">
+        <div class="col-md  table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Time
                 <i class="bi-clock"></i>
@@ -67,7 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md">
+        <div class="col-md table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Pilot function
             </header>
@@ -124,9 +124,9 @@
                 </tbody>
             </table>
         </div>
-    <div class="row">
+    <div class="row m-0 p-0">
         <!-- <h1>Duration {{flightDuration}}</h1> -->
-        <div class="col-md">
+        <div class="col-md table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Places
                 <i class="bi bi-globe-europe-africa"></i>
@@ -146,7 +146,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md">
+        <div class="col-md table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Landings
                 <!-- <i class="bi bi-globe-europe-africa"></i> -->
@@ -168,7 +168,7 @@
             </table>
         </div>
     </div>
-    <div class="col-12 my-2">
+    <div class="col-12 my-2 table-responsive">
         <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
             Additional info
             <i class="bi bi-card-heading"></i>
@@ -194,7 +194,7 @@
                 Detailed time
                 <i class="bi bi-arrows-expand"></i>
             </header>
-            <div class="collapse" id="timeDetailsCollapse">
+            <div class="collapse table-responsive" id="timeDetailsCollapse">
                 <table class="table table-striped">
                     <thead>
                     <tr>
