--- a/src/components/side-nav/sidenav.component.html
+++ b/src/components/side-nav/sidenav.component.html
@@ -1,37 +1,70 @@
-<nav class="text-light bg-dark vh-100">
-    <div class="d-flex justify-content-center align-items-center py-3 pt-4">
-        <a [routerLink]="['/']" class="navbar-brand text-light " style="font-size: 2rem">
-            LOG<b>BOOK</b>
-        </a>
+<nav class="text-light bg-dark vh-100 bigNav" style="width: 230px;">
+    <div>
+        <div class="d-flex justify-content-center align-items-center py-3 pt-4">
+            <a [routerLink]="['/']" class="navbar-brand text-light " style="font-size: 2rem">
+                LOG<b>BOOK</b>
+            </a>
+        </div>
+        <hr class="mx-3" />
+        <ul class="nav flex-column ps-2">
+            <li class="nav-item">
+                <a [routerLink]="['/logout']" class="nav-link text-light" routerLinkActive="active">
+                    <i class="bi bi-box-arrow-left me-2"></i> Logout
+                </a>
+            </li>
+            <li class="nav-item">
+                <a [routerLink]="['/flights']" class="nav-link text-light" routerLinkActive="active">
+                    <i class="bi bi-airplane-engines me-2"></i> Flights
+                </a>
+                <ul class="nav flex-column ms-3">
+                    <li class="nav-item">
+                        <a [routerLink]="['/flights', 'list']" class="nav-link text-light" routerLinkActive="active">
+                            <i class="bi bi-list-ol me-2"></i> List
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [routerLink]="['/flights', 'add']" class="nav-link text-light" routerLinkActive="active">
+                            <i class="bi bi-plus-circle me-2"></i> New flight
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a [routerLink]="['/flights', 'logbook']" class="nav-link text-light" routerLinkActive="active">
+                            <i class="bi bi-table me-2"></i> Logbook
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
-    <hr class="mx-3" />
-    <ul class="nav flex-column ps-2">
-        <li class="nav-item">
-            <a [routerLink]="['/logout']" class="nav-link text-light" routerLinkActive="active">
-                <i class="bi bi-box-arrow-left me-2"></i> Logout
-            </a>
-        </li>
-        <li class="nav-item">
-            <a [routerLink]="['/flights']" class="nav-link text-light" routerLinkActive="active">
-                <i class="bi bi-airplane-engines me-2"></i> Flights
-            </a>
-            <ul class="nav flex-column ms-3">
-                <li class="nav-item">
-                    <a [routerLink]="['/flights', 'list']" class="nav-link text-light" routerLinkActive="active">
-                        <i class="bi bi-list-ol me-2"></i> List
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a [routerLink]="['/flights', 'add']" class="nav-link text-light" routerLinkActive="active">
-                        <i class="bi bi-plus-circle me-2"></i> New flight
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a [routerLink]="['/flights', 'logbook']" class="nav-link text-light" routerLinkActive="active">
-                        <i class="bi bi-table me-2"></i> Logbook
-                    </a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+</nav>
+<nav class=" text-light bg-dark justify-content-center d-flex smallNav">
+    <div class="d-flex">
+        <ul class="navbar-nav d-flex flex-row justify-content-between">
+            <li class="nav-item m-2 border rounded">
+                <a [routerLink]="['/logout']" class="nav-link text-light p-2" routerLinkActive="active">
+                    <i class="bi bi-box-arrow-left m-2"></i>
+                </a>
+            </li>
+            <li class="nav-item m-2 border rounded">
+                <a [routerLink]="['/flights']" class="nav-link text-light p-2" routerLinkActive="active">
+                    <i class="bi bi-airplane-engines m-2"></i>
+                </a>
+            </li>
+            <li class="nav-item m-2 border rounded">
+                <a [routerLink]="['/flights', 'list']" class="nav-link text-light p-2" routerLinkActive="active">
+                    <i class="bi bi-list-ol m-2"></i>
+                </a>
+            </li>
+            <li class="nav-item m-2 border rounded">
+                <a [routerLink]="['/flights', 'add']" class="nav-link text-light p-2" routerLinkActive="active">
+                    <i class="bi bi-plus-circle m-2"></i>
+                </a>
+            </li>
+            <li class="nav-item m-2 border rounded">
+                <a [routerLink]="['/flights', 'logbook']" class="nav-link text-light p-2" routerLinkActive="active">
+                    <i class="bi bi-table m-2"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
