--- a/src/components/side-nav/sidenav.component.scss
+++ b/src/components/side-nav/sidenav.component.scss
@@ -1,3 +1,20 @@
 .active{
     font-weight: bold;
 }
+.bigNav{
+    @media (max-width: 768px) { 
+        display: none;
+    }
+    float: left;
+}
+
+.smallNav{
+    @media (min-width: 768px) {
+        display: none !important;
+    }
+}
+
+
+.smallNav .navbar-nav .active{
+    background: rgba(255,255,255, 0.2);
+}
