--- a/src/app/flights_page/logbook_page/logbook_page.component.html
+++ b/src/app/flights_page/logbook_page/logbook_page.component.html
@@ -1,4 +1,4 @@
-<div class="border table-responsive ">
+<div class="m-0 p-0 container border table-responsive">
     <table class="table table-striped table-bordered">
         <thead>
             <tr class="text-center">
