--- a/src/app/home_page/home-page.component.html
+++ b/src/app/home_page/home-page.component.html
@@ -1,4 +1,10 @@
-<div>
-    Home Page
-    
+<div class="container-fluid px-0">
+    <a [routerLink]="['/login']">Login Page</a>
+
+      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-target
+  </button>
+<div class="collapse" id="collapseExample">
+    XD
+</div>
 </div>
