--- a/src/components/side-nav/sidenav.component.scss
+++ b/src/components/side-nav/sidenav.component.scss
@@ -3,9 +3,8 @@
 }
 .bigNav{
     @media (max-width: 768px) { 
-        display: none;
+        display: none !important;
     }
-    float: left;
 }
 
 .smallNav{
