--- a/src/app/flights_page/add-flight-page/add-flight-page.component.html
+++ b/src/app/flights_page/add-flight-page/add-flight-page.component.html
@@ -1,7 +1,10 @@
 
 <!-- TODO: inform that you have to select aircraft type -->
 
-<div class="container p-3">
+<div class="container p-2">
+    @if(error()!=null){
+            <div class="alert alert-danger" role="alert" [innerHTML]="error()"></div>
+        }
     <div class="row">
         <div class="col-md table-responsive">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
@@ -32,7 +35,7 @@
                     </td>
                     }
                     <td>
-                        <input class="form-control" list="aircrafts" type="text" [value]="flight()?.aircraftRegistration" (input)="setValue('aircraftRegistration', $event.target.value.toUpperCase()); getAirplanes()"/>
+                        <input class="form-control" list="aircrafts" type="text" [value]="flight().aircraftRegistration" (input)="setValue('aircraftRegistration', $event.target.value.toUpperCase()); getAirplanes()"/>
                         <datalist id="aircrafts">
                                 @for (aircraft of aircrafts(); track aircraft.id) {
                                     <option value="{{aircraft.registration}}">{{aircraft.registration}} - {{aircraft.aircraftType.model}} ({{aircraft.aircraftType.type}})</option>
@@ -60,14 +63,14 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input class="form-control" type="date" value={{flight()?.flightDate}} (input)="setValue('flightDate', $event.target.value.toUpperCase())"/></td>
-                    <td><input class="form-control" type="time" value={{flight()?.departureTime}} (input)="setValue('departureTime', $event.target.value.toUpperCase())"/></td>
-                    <td><input class="form-control" type="time" value={{flight()?.arrivalTime}} (input)="setValue('arrivalTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="date" value={{flight().flightDate}} (input)="setValue('flightDate', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().departureTime}} (input)="setValue('departureTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().arrivalTime}} (input)="setValue('arrivalTime', $event.target.value.toUpperCase())"/></td>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <div class="col-md table-responsive">
+        <div class="col-md">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
                 Pilot function
             </header>
@@ -77,6 +80,7 @@
                     <th>PIC</th>
                     <th>Single Pilot SE</th>
                     <th>Single Pilot ME</th>
+                    <th>Dual</th>
                     <th>Multi Pilot</th>
                     <th>Instructor</th>
                     <th>Night</th>
@@ -98,6 +102,11 @@
                     <td>
                         <div class="form-check d-flex justify-content-center">
                             <input class="form-check-input" type="checkbox" name="pilotFunction" value="SinglePilotMeTime" (change)="setPilotFunction($event.target.value, $event.target.checked)">
+                        </div>
+                    </td>
+                    <td>
+                        <div class="form-check d-flex justify-content-center">
+                            <input class="form-check-input" type="checkbox" name="pilotFunction" value="dualTime" (change)="setPilotFunction($event.target.value, $event.target.checked)">
                         </div>
                     </td>
                     <td>
@@ -140,8 +149,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input class="form-control" type="text" value={{flight()?.departureAerodrome}} (input)="setValue('departureAerodrome', $event.target.value.toUpperCase())"/></td>
-                    <td><input class="form-control" type="text" value={{flight()?.arrivalAerodrome}} (input)="setValue('arrivalAerodrome', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="text" value={{flight().departureAerodrome}} (input)="setValue('departureAerodrome', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="text" value={{flight().arrivalAerodrome}} (input)="setValue('arrivalAerodrome', $event.target.value.toUpperCase())"/></td>
                 </tr>
                 </tbody>
             </table>
@@ -161,8 +170,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input class="form-control" type="number" value={{flight()?.landingsDay}} (input)="setValue('landingsDay', $event.target.value.toUpperCase())"/></td>
-                    <td><input class="form-control" type="number" value={{flight()?.landingsNight}} (input)="setValue('landingsNight', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="number" value={{flight().landingsDay}} (input)="setValue('landingsDay', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="number" value={{flight().landingsNight}} (input)="setValue('landingsNight', $event.target.value.toUpperCase())"/></td>
                 </tr>
                 </tbody>
             </table>
@@ -182,51 +191,53 @@
             </thead>
             <tbody>
             <tr>
-                <td><input class="form-control" type="text" value={{flight()?.remarks}} (input)="setValue('remarks', $event.target.value.toUpperCase())"/></td>
-                <td><input class="form-control" type="text" value={{flight()?.picName}} (input)="setValue('picName', $event.target.value.toUpperCase())"/></td>
+                <td><input class="form-control" type="text" value={{flight().remarks}} (input)="setValue('remarks', $event.target.value.toUpperCase())"/></td>
+                <td><input class="form-control" type="text" value={{flight().picName}} (input)="setValue('picName', $event.target.value.toUpperCase())"/></td>
             </tr>
             </tbody>
         </table>
     </div>
 
-        <div class="col-12 mb-2">
-            <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between" data-bs-toggle="collapse" data-bs-target="#timeDetailsCollapse">
-                Detailed time
-                <i class="bi bi-arrows-expand"></i>
-            </header>
-            <div class="collapse table-responsive" id="timeDetailsCollapse">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Total time</th>
-                        <th>PIC time</th>
-                        <th>Single Pilot SE time</th>
-                        <th>Single Pilot ME time</th>
-                        <th>Multi Pilot time</th>
-                        <th>Instructor</th>
-                        <th>NIGHT</th>
-                        <th>IFR</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input class="form-control" type="time" value={{flight()?.totalTime}} (input)="setValue('totalTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.picTime}} (input)="setValue('picTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.SinglePilotSeTime}} (input)="setValue('SinglePilotSeTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.SinglePilotMeTime}} (input)="setValue('SinglePilotMeTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.multiPilotTime}} (input)="setValue('multiPilotTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.instructorTime}} (input)="setValue('instructorTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.flightConditionNightTime}} (input)="setValue('flightConditionNightTime', $event.target.value.toUpperCase())"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.flightConditionIfrTime}} (input)="setValue('flightConditionIfrTime', $event.target.value.toUpperCase())"/></td>
-                    </tr>
-                    </tbody>
-                </table>  
-            </div>
+    <div class="col-12 mb-2">
+        <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between" data-bs-toggle="collapse" data-bs-target="#timeDetailsCollapse">
+            Detailed time
+            <i class="bi bi-arrows-expand"></i>
+        </header>
+        <div class="collapse table-responsive" id="timeDetailsCollapse">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Total time</th>
+                    <th>PIC time</th>
+                    <th>Single Pilot SE time</th>
+                    <th>Single Pilot ME time</th>
+                    <th>Dual</th>
+                    <th>Multi Pilot time</th>
+                    <th>Instructor</th>
+                    <th>NIGHT</th>
+                    <th>IFR</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><input class="form-control" type="time" value={{flight().totalTime}} (input)="setValue('totalTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().picTime}} (input)="setValue('picTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().SinglePilotSeTime}} (input)="setValue('SinglePilotSeTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().SinglePilotMeTime}} (input)="setValue('SinglePilotMeTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().dualTime}} (input)="setValue('dualTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().multiPilotTime}} (input)="setValue('multiPilotTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().instructorTime}} (input)="setValue('instructorTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().flightConditionNightTime}} (input)="setValue('flightConditionNightTime', $event.target.value.toUpperCase())"/></td>
+                    <td><input class="form-control" type="time" value={{flight().flightConditionIfrTime}} (input)="setValue('flightConditionIfrTime', $event.target.value.toUpperCase())"/></td>
+                </tr>
+                </tbody>
+            </table>  
         </div>
+    </div>
     </div>
 
 
-    <div style="position: relative;">
+    <!-- <div style="position: relative;">
         <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between" data-bs-toggle="collapse" data-bs-target="#logBookPreviewCollapse">
             Logbook preview
             <i class="bi bi-arrows-expand"></i>
@@ -269,35 +280,37 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>{{ flight()?.flightDate }}</td>
-                    <td>{{ flight()?.departureAerodrome }}</td>
-                    <td>{{ flight()?.departureTime }}</td>
-                    <td>{{ flight()?.arrivalAerodrome }}</td>
-                    <td>{{ flight()?.arrivalTime }}</td>
-                    <td>{{ selectedType()?.type }}</td>
-                    <td>{{ flight()?.aircraftRegistration}}</td>
-                    <td>{{ flight()?.SinglePilotSeTime }}</td>
-                    <td>{{ flight()?.SinglePilotMeTime }}</td>
-                    <td>{{ flight()?.multiPilotTime }}</td>
-                    <td>{{ flight()?.totalTime }}</td>
-                    <td>{{ flight()?.picName }}</td>
-                    <td>{{ flight()?.landingsDay }}</td>
-                    <td>{{ flight()?.landingsNight }}</td>
-                    <td>{{ flight()?.flightConditionNightTime }}</td>
-                    <td>{{ flight()?.flightConditionIfrTime }}</td>
-                    <td>{{ flight()?.picTime }}</td>
-                    <td>{{ flight()?.copilotTime }}</td>
-                    <td>{{ flight()?.dualTime }}</td>
-                    <td>{{ flight()?.instructorTime }}</td>
-                    <td>{{ flight()?.remarks }}</td>
+                    <td>{{ flight().flightDate }}</td>
+                    <td>{{ flight().departureAerodrome }}</td>
+                    <td>{{ flight().departureTime }}</td>
+                    <td>{{ flight().arrivalAerodrome }}</td>
+                    <td>{{ flight().arrivalTime }}</td>
+                    <td>{{ selectedType().type }}</td>
+                    <td>{{ flight().aircraftRegistration}}</td>
+                    <td>{{ flight().SinglePilotSeTime }}</td>
+                    <td>{{ flight().SinglePilotMeTime }}</td>
+                    <td>{{ flight().multiPilotTime }}</td>
+                    <td>{{ flight().totalTime }}</td>
+                    <td>{{ flight().picName }}</td>
+                    <td>{{ flight().landingsDay }}</td>
+                    <td>{{ flight().landingsNight }}</td>
+                    <td>{{ flight().flightConditionNightTime }}</td>
+                    <td>{{ flight().flightConditionIfrTime }}</td>
+                    <td>{{ flight().picTime }}</td>
+                    <td>{{ flight().copilotTime }}</td>
+                    <td>{{ flight().dualTime }}</td>
+                    <td>{{ flight().instructorTime }}</td>
+                    <td>{{ flight().remarks }}</td>
                 </tr>
                 </tbody>
             </table>
         </div>
-    </div>
+    </div> -->
 
     <div class="m-3 p-2 d-flex justify-content-center">
-        <button class="btn btn-outline-success p-3 px-5" (click)="addFlight()">Add flight</button>
+        <button class="btn btn-primary mx-2 p-3 px-5" (click)="validate()">Validate</button>
+        <button class="btn btn-success mx-2 p-3 px-5" [disabled]='!validated()' (click)="addFlight()">Add flight</button>
+        <button class="btn btn-danger mx-2 p-3 px-5" (click)="clearFlight()">Clear form</button>
     </div>
 
 
