--- a/src/app/flights_page/flights-list/flights-details/flight-details.component.html
+++ b/src/app/flights_page/flights-list/flights-details/flight-details.component.html
@@ -1,204 +1,37 @@
 
-<div class="container p-1" id="flightDetails">
-    @if(unsavedChanges()){
-<div class="mt-2 alert alert-danger d-flex align-items-center justify-content-between animated-alert py-0 pe-0 m-0">
-    <span>You have unsaved changes. Remember to save them before you select another airplane</span>
-    <button class="btn btn-lg btn-outline-success ">Save them</button>
-</div>
-<div class="mt-1 alert alert-dark" role="alert">
-    Warning! The time doesn't self-calculate when changing the data from this window
-</div>
-}
-    <button class="btn btn-danger rounded-0 w-100 p-3 mb-2" id="deselectButton" (click)="deselect()">Close</button>
-    <div class="row">
-        <div class="col-md">
-            <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
-                Aircraft
-                <i class="bi-airplane"></i>
-            </header>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Type</th>
-                    <th>Registration</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><input class="form-control" type="text" value={{flight()?.aircraft?.aircraftType?.type}} (input)="updateSelected('aircraftType', $event.target.value)"/></td>
-                    <td><input class="form-control" type="text" value={{flight()?.aircraft?.registration}} (input)="updateSelected('aircraftRegistration', $event.target.value)"/></td>
-                </tr>
-                </tbody>
-            </table>
+<div id="flightDetails">
+    <header class="my-2">
+        <button class="btn btn-danger rounded-0 w-100 p-3 mb-2" id="deselectButton" (click)="deselect()">Close</button>
+        <div class="d-flex p-0 m-0">
+            <button class="btn btn-outline-primary p-5 rounded-0" [class.active]="selectedWindow()==1" (click)="setWindow(1)" style="border-right: 0;"><i class="bi bi-bar-chart"></i></button>
+            <button class="btn btn-outline-primary p-5 rounded-0" [class.active]="selectedWindow()==2" (click)="setWindow(2)"><i class="bi bi-map"></i></button>
         </div>
-        <div class="col-md">
+    </header>
+    @if(selectedWindow()==1){
+            @if(unsavedChanges()){
+            <div class="mt-1 alert alert-danger" role="alert">
+                <span>You have unsaved changes. Remember to save them before you select another airplane</span>
+                Warning! The time doesn't self-calculate when changing the data from this window
+            </div>
+            }
+        <div class="user-select-none" style="height: 100vh; overflow-y: scroll;">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
-                Time
-                <i class="bi-clock"></i>
+                Flight details
             </header>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Departure</th>
-                    <th>Arrival</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><input class="form-control" type="date" value={{flight()?.flightDate}} (input)="updateSelected('flightDate', $event.target.value)"/></td>
-                    <td><input class="form-control" type="time" value={{flight()?.departureTime}} (input)="updateSelected('departureTime', $event.target.value)"/></td>
-                    <td><input class="form-control" type="time" value={{flight()?.arrivalTime}} (input)="updateSelected('arrivalTime', $event.target.value)"/></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-12 mb-2">
-            <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between" data-bs-toggle="collapse" data-bs-target="#timeDetailsCollapse">
-                Detailed time
-                <i class="bi bi-arrows-expand"></i>
-            </header>
-            <div class="collapse" id="timeDetailsCollapse">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Total time</th>
-                        <th>PIC time</th>
-                        <th>Single Pilot SE time</th>
-                        <th>Single Pilot ME time</th>
-                        <th>Multi Pilot time</th>
-                        <th>NIGHT</th>
-                        <th>IFR</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input class="form-control" type="time" value={{flight()?.totalTime}} (input)="updateSelected('totalTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.picTime}} (input)="updateSelected('picTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.SinglePilotSeTime}} (input)="updateSelected('SinglePilotSeTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.SinglePilotMeTime}} (input)="updateSelected('SinglePilotMeTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.multiPilotTime}} (input)="updateSelected('multiPilotTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.flightConditionNightTime}} (input)="updateSelected('flightConditionNightTime', $event.target.value)"/></td>
-                        <td><input class="form-control" type="time" value={{flight()?.flightConditionIfrTime}} (input)="updateSelected('flightConditionIfrTime', $event.target.value)"/></td>
-                    </tr>
-                    </tbody>
-                </table>  
+            <div>
+                <flight-info [flight]="flight" [unsavedChanges]="unsavedChanges" (flightModified)='flightModified.emit()'></flight-info>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md">
+    }
+    @if(selectedWindow()==2){
+        <div class="user-select-none">
             <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
-                Places
-                <i class="bi bi-globe-europe-africa"></i>
+                Flight planner
             </header>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Departure</th>
-                    <th>Arrival</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><input class="form-control" type="text" value={{flight()?.departureAerodrome}} (input)="updateSelected('departureAerodrome', $event.target.value)"/></td>
-                    <td><input class="form-control" type="text" value={{flight()?.arrivalAerodrome}} (input)="updateSelected('arrivalAerodrome', $event.target.value)"/></td>
-                </tr>
-                </tbody>
-            </table>
+            <div>
+                <flight-planner [flight]="flight"></flight-planner>
+            </div>
         </div>
-        <div class="col-md">
-            <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between">
-                Landings
-                <!-- <i class="bi bi-globe-europe-africa"></i> -->
-                 <!-- Have to find an appropiate icon -->
-            </header>
-            <table class="table table-striped"></table>
-                <thead>
-                <tr>
-                    <th>Day</th>
-                    <th>Night</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><input class="form-control" type="number" value={{flight()?.landingsDay}} (input)="updateSelected('landingsDay', $event.target.value)"/></td>
-                    <td><input class="form-control" type="number" value={{flight()?.landingsNight}} (input)="updateSelected('landingsNight', $event.target.value)"/></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div style="position: relative;">
-        <header class="p-2 rounded bg-secondary text-light d-flex justify-content-between" data-bs-toggle="collapse" data-bs-target="#logBookPreviewCollapse">
-            Logbook preview
-            <i class="bi bi-table"></i>
-        </header>
-        <div class="collapse table-responsive" id="logBookPreviewCollapse" style="position: absolute; width: 100%;">
-            <table class=" table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col" rowspan="2">Date</th>
-                        <th scope="col" colspan="2">Departure</th>
-                        <th scope="col" colspan="2">Arrival</th>
-                        <th scope="col" colspan="2">Aircraft</th>
-                        <th scope="col" colspan="2">Single-Pilot Time</th>
-                        <th scope="col" rowspan="2">Multi-Pilot Time</th>
-                        <th scope="col" rowspan="2">Total time of Flight</th>
-                        <th scope="col" rowspan="2">PIC name</th>
-                        <th scope="col" colspan="2">Landings</th>
-                        <th scope="col" colspan="2">Operational Condition Time</th>
-                        <th scope="col" colspan="4">Pilot Function Time</th>
-                        <th scope="col" rowspan="2">Remarks</th>
-                    </tr>
-                    <tr>
-                        <th scope="col">Place</th>
-                        <th scope="col">Time</th>
-                        <th scope="col">Place</th>
-                        <th scope="col">Time</th>
-                        <th scope="col">Make, Model</th>
-                        <th scope="col">Registration</th>
-                        <th scope="col">SE</th>
-                        <th scope="col">ME</th>
-                        <th scope="col">Day</th>
-                        <th scope="col">Night</th>
-                        <th scope="col">Night</th>
-                        <th scope="col">IFR</th>
-                        <th scope="col">PIC</th>
-                        <th scope="col">Co-Pilot</th>
-                        <th scope="col">Dual</th>
-                        <th scope="col">Instructor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>{{ flight()?.flightDate }}</td>
-                    <td>{{ flight()?.departureAerodrome }}</td>
-                    <td>{{ flight()?.departureTime }}</td>
-                    <td>{{ flight()?.arrivalAerodrome }}</td>
-                    <td>{{ flight()?.arrivalTime }}</td>
-                    <td>{{ flight()?.aircraft?.aircraftType?.type }}</td>
-                    <td>{{ flight()?.aircraft?.registration }}</td>
-                    <td>{{ flight()?.SinglePilotSeTime }}</td>
-                    <td>{{ flight()?.SinglePilotMeTime }}</td>
-                    <td>{{ flight()?.multiPilotTime }}</td>
-                    <td>{{ flight()?.totalTime }}</td>
-                    <td>{{ flight()?.picName }}</td>
-                    <td>{{ flight()?.landingsDay }}</td>
-                    <td>{{ flight()?.landingsNight }}</td>
-                    <td>{{ flight()?.flightConditionNightTime }}</td>
-                    <td>{{ flight()?.flightConditionIfrTime }}</td>
-                    <td>{{ flight()?.picTime }}</td>
-                    <td>{{ flight()?.copilotTime }}</td>
-                    <td>{{ flight()?.dualTime }}</td>
-                    <td>{{ flight()?.instructorTime }}</td>
-                    <td>{{ flight()?.remarks }}</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        </div>
-
+    }
 
 </div>
