--- a/src/app/flights_page/flights-page.component.html
+++ b/src/app/flights_page/flights-page.component.html
@@ -1,8 +1,10 @@
-<div>
-        <div>
+<div class="container-fluid p-0 m-0" style="overflow-x: hidden;">
+    <div class="row m-0 g-0">
+        <div class="col-md-2">
             <side-nav></side-nav>
         </div>
-        <div>
+        <div class="col-md-10">
             <router-outlet></router-outlet>
         </div>
+    </div>
 </div>
