--- a/src/components/side-nav/sidenav.component.html
+++ b/src/components/side-nav/sidenav.component.html
@@ -1,4 +1,4 @@
-<nav class="text-light bg-dark vh-100 bigNav" style="width: 230px;">
+<nav class="text-light bg-dark vh-100 bigNav d-flex justify-content-between flex-column">
     <div>
         <div class="d-flex justify-content-center align-items-center py-3 pt-4">
             <a [routerLink]="['/']" class="navbar-brand text-light " style="font-size: 2rem">
@@ -8,18 +8,13 @@
         <hr class="mx-3" />
         <ul class="nav flex-column ps-2">
             <li class="nav-item">
-                <a [routerLink]="['/logout']" class="nav-link text-light" routerLinkActive="active">
-                    <i class="bi bi-box-arrow-left me-2"></i> Logout
-                </a>
-            </li>
-            <li class="nav-item">
                 <a [routerLink]="['/flights']" class="nav-link text-light" routerLinkActive="active">
                     <i class="bi bi-airplane-engines me-2"></i> Flights
                 </a>
                 <ul class="nav flex-column ms-3">
                     <li class="nav-item">
                         <a [routerLink]="['/flights', 'list']" class="nav-link text-light" routerLinkActive="active">
-                            <i class="bi bi-list-ol me-2"></i> List
+                            <i class="bi bi-list-ol me-2"></i> Flight List
                         </a>
                     </li>
                     <li class="nav-item">
@@ -36,13 +31,26 @@
             </li>
         </ul>
     </div>
+    
+    <div class="p-3">
+        @if(userWindow()){
+            <div class="mb-2">
+                <button [routerLink]="['/logout']" class="btn btn-danger w-100">Logout</button>
+            </div>
+        }
+        <button class="btn btn-primary w-100" type="button" (click)="openUserWindow()">
+            <i class="bi bi-person"></i>
+            User
+        </button>
+    </div>
+    
 </nav>
 <nav class=" text-light bg-dark justify-content-center d-flex smallNav">
     <div class="d-flex">
         <ul class="navbar-nav d-flex flex-row justify-content-between">
             <li class="nav-item m-2 border rounded">
-                <a [routerLink]="['/logout']" class="nav-link text-light p-2" routerLinkActive="active">
-                    <i class="bi bi-box-arrow-left m-2"></i>
+                <a (click)="openUserWindow()" class="nav-link text-light p-2 px-3" [ngClass]="{'active': userWindow()}">
+                    <i class="bi bi-person"></i>
                 </a>
             </li>
             <li class="nav-item m-2 border rounded">
@@ -67,4 +75,11 @@
             </li>
         </ul>
     </div>
+    @if(userWindow()){
+    <div class="position-absolute bg-dark w-100 mt-5 user-select-none">
+        <div class="position-absolute mt-2">
+            <button [routerLink]="['/logout']" class="btn btn-danger rounded-0" style="width: 100vw;">Logout</button>
+        </div>
+    </div>
+}
 </nav>
