--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons';
+@use '../node_modules/bootstrap/scss/bootstrap.scss' as *;
+
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
