added extension status checker

--- a/src/app/flights_page/add-flight-page/add-flight-page.component.html
+++ b/src/app/flights_page/add-flight-page/add-flight-page.component.html
@@ -1,7 +1,7 @@
 
 <!-- TODO: inform that you have to select aircraft type -->
 
-<div class="container p-2">
+<div class="container p-2" style="overflow-x: hidden;">
     @if(error()!=null){
             <div class="alert alert-danger" role="alert" [innerHTML]="error()"></div>
         }
