--- a/src/app/flights_page/flights-list/flights-details/flight-details.component.html
+++ b/src/app/flights_page/flights-list/flights-details/flight-details.component.html
@@ -1,5 +1,5 @@
 
-<div id="flightDetails" style="overflow-y: scroll;">
+<div id="flightDetails" style="overflow: hidden;">
     <header class="my-2">
         <button class="btn btn-danger rounded-0 w-100 p-3 mb-2" id="deselectButton" (click)="deselect()">Close</button>
         <div class="d-flex p-0 m-0">
